feat: Add core application logic and entry point, introduce server creation wizard, automation, and backups, and update documentation.